Calculate correct img size, so it doesn't get distorted

--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -21,11 +21,11 @@
 
     img {
         width: 120px;
-        height: 25px;
+        height: 21.5px;
 
         @media screen and (min-width: 2000px) {
             width: 180px;
-            height: 40px;
+            height: 32.24px;
         }
     }
 }
@@ -109,7 +109,7 @@
         align-items: flex-end;
         flex-direction: column;
 
-        background: url('../../assets/bgWhite.png');
+        background: url('../../assets/bgWhite.webp');
         background-size: cover;
         background-repeat: repeat;
 
